FEAT: add daily scraper

--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -11,6 +11,8 @@
 
     <title>Advanced Job Search</title>
 
+    <!-- force refresh of favicon -->
+    <link rel="icon" href="favicon.ico" />
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
