FEAT: finish up showing plots

--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -102,8 +102,14 @@
             <div class="row">
               <div class="col-lg-6 text-center" id="search_results1">
               </div>
-                <div class="col-lg-6 text-center" id="search_results2">
-                </div>
+              <div class="col-lg-6 text-center" id="search_results2">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-6 text-center" id="skills_list">
+              </div>
+              <div class="col-lg-6 text-center" id="salary_range">
+              </div>
             </div>
             <hr class="light">
         </div>
