--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -101,7 +101,7 @@
         </div>
     </header>
 
-    <section class="bg-primary" id="results">
+    <section class="bg-primary" id="results" style="display: none;">
         <div class="container">
             <div class="row">
               <div class="col-lg-6 text-center" id="search_results1">
@@ -110,18 +110,29 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-lg-6 text-center">
-                <p>Shift+click on the bars in the chart to add skills to filter jobs below</p>
-                <p>Shift+click them again to remove</p>
+              <div class="col-lg-6 text-center" id="search_instructions1" style="display: none;">
+                <p>Shift+click on the bars in the chart to add skills to filter the job listings below.</br>
+                Click outside of the bars to reset your selection.</p>
                 <ul class="list-group" id="skills_list">
                 </ul>
               </div>
               <div class="col-lg-6 text-center">
+                <p id="search_instructions2" style="display: none;">Choose a salary range to filter by:</p>
                 <div class="input-group" id="salary_range">
                 </div>
+                <p></p>
               </div>
             </div>
-            <hr class="light">
+            <div class="row">
+              <div class="col-lg-12"><button id="filter_jobs" type="button" class="btn btn-primary center-block" style="background-color: #006d59; display: none;" onclick="filter_jobs()">Filter jobs</button></div>
+            </div>
+            <hr id="hr1" class="light">
+
+            <div class="row">
+              <div class="col-lg-12" id="job_listings">
+              </div>
+            </div>
+
         </div>
     </section>
 
