--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -22,7 +22,24 @@
 
     <style>
     .bk-plot-layout {display: inline-block;}
+
+    .panel-heading .accordion-toggle:after {
+    /* symbol for "opening" panels */
+    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
+    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
+    float: right;        /* adjust as needed */
+    color: grey;         /* adjust as needed */
+    }
+    .panel-heading .accordion-toggle.collapsed:after {
+        /* symbol for "collapsed" panels */
+        content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+    }
     </style>
+
+    <!-- pace.js loading bar -->
+    <!-- http://stackoverflow.com/questions/20120029/using-pace-js-on-loading-appended-images -->
+    <link href="css/pace_big_counter.css" rel="stylesheet">
+    <script data-pace-options='{ "elements": { "selectors": [".bk-layout-fixed"] }, "startOnPageLoad": false }' src="js/pace.min.js"></script>
 
     <!-- force refresh of favicon -->
     <link rel="icon" href="favicon.ico" />
@@ -103,28 +120,49 @@
 
     <section class="bg-primary" id="results" style="display: none;">
         <div class="container">
+
             <div class="row">
               <div class="col-lg-6 text-center" id="search_results1">
               </div>
               <div class="col-lg-6 text-center" id="search_results2">
               </div>
             </div>
+
             <div class="row">
-              <div class="col-lg-6 text-center" id="search_instructions1" style="display: none;">
+              <div class="panel-group" id="accordion">
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h4 class="panel-title">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                        Location bar plot
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseOne" class="panel-collapse collapse">
+                    <div class="panel-body" id="location_plot">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-6 text-center" id="search_instructions1">
                 <p>Shift+click on the bars in the chart to add skills to filter the job listings below.</br>
                 Click outside of the bars to reset your selection.</p>
                 <ul class="list-group" id="skills_list">
                 </ul>
               </div>
               <div class="col-lg-6 text-center">
-                <p id="search_instructions2" style="display: none;">Choose a salary range to filter by:</p>
+                <p id="search_instructions2">Choose a salary range to filter by:</p>
                 <div class="input-group" id="salary_range">
                 </div>
                 <p></p>
               </div>
             </div>
+
             <div class="row">
-              <div class="col-lg-12"><button id="filter_jobs" type="button" class="btn btn-primary center-block" style="background-color: #006d59; display: none;" onclick="filter_jobs()">Filter jobs</button></div>
+              <div class="col-lg-12"><button id="filter_jobs" type="button" class="btn btn-primary center-block" style="background-color: #006d59;" onclick="filter_jobs()">Filter jobs</button></div>
             </div>
             <hr id="hr1" class="light">
 
