--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -133,13 +133,25 @@
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h4 class="panel-title">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-                        Location bar plot
+                      <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" aria-expanded="false" href="#collapseOne">
+                        Location bar plots
                       </a>
                     </h4>
                   </div>
-                  <div id="collapseOne" class="panel-collapse collapse">
-                    <div class="panel-body" id="location_plot">
+                  <div id="collapseOne" class="panel-collapse collapse out">
+                    <div class="panel-body">
+                      <div class="col-lg-6 text-center" id="location_plot1">
+                      </div>
+                      <div class="col-lg-6 text-center" id="location_plot2">
+                      </div>
+                      <br />
+                      <div class="col-lg-12 text-center" id="add_locs">
+                      </div>
+                      <br />
+                      <div class="col-lg-12 text-center">
+                        <ul class="list-group" id="locs_list">
+                        </ul>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -148,7 +160,7 @@
 
             <div class="row">
               <div class="col-lg-6 text-center" id="search_instructions1">
-                <p>Shift+click on the bars in the chart to add skills to filter the job listings below.</br>
+                <p>Shift+click on the bars in the skills (and/or locations) chart to filter the job listings below.</br>
                 Click outside of the bars to reset your selection.</p>
                 <ul class="list-group" id="skills_list">
                 </ul>
@@ -163,11 +175,11 @@
 
             <div class="row">
               <div class="col-lg-12"><button id="filter_jobs" type="button" class="btn btn-primary center-block" style="background-color: #006d59;" onclick="filter_jobs()">Filter jobs</button></div>
+              <hr id="hr1" class="light">
             </div>
-            <hr id="hr1" class="light">
 
             <div class="row">
-              <div class="col-lg-12" id="job_listings">
+              <div class="col-lg-12" id="job_listings" style="overflow: hidden;">
               </div>
             </div>
 
