FEAT: add clean emp_type and salaries to db

--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -39,7 +39,7 @@
     <!-- pace.js loading bar -->
     <!-- http://stackoverflow.com/questions/20120029/using-pace-js-on-loading-appended-images -->
     <link href="css/pace_big_counter.css" rel="stylesheet">
-    <script data-pace-options='{ "elements": { "selectors": [".bk-layout-fixed"] }, "startOnPageLoad": false }' src="js/pace.min.js"></script>
+    <script data-pace-options='{ "elements": { "selectors": ["#salary_img"] }, "startOnPageLoad": false }' src="js/pace.min.js"></script>
 
     <!-- force refresh of favicon -->
     <link rel="icon" href="favicon.ico" />
@@ -112,7 +112,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4"></div>
-          <div class="col-lg-4"><button id="search_analyze" type="button" class="btn btn-primary" style="display:inline-block;" onclick="get_job_stats_form()">Search and analyze!</button></div>
+          <div class="col-lg-4"><button id="search_analyze" type="button" class="btn btn-primary" style="display:inline-block;" onclick="get_job_stats_form()">Request new search term</button></div>
           <div class="col-lg-4"></div>
         </div>
         </div>
