--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -173,7 +173,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" id="filter_button_row">
               <div class="col-lg-12"><button id="filter_jobs" type="button" class="btn btn-primary center-block" style="background-color: #006d59;" onclick="filter_jobs()">Filter jobs</button></div>
               <hr id="hr1" class="light">
             </div>
