--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -112,7 +112,7 @@
           </div>
           <div class="row">
             <div class="col-lg-4"></div>
-          <div class="col-lg-4"><button id="search_analyze" type="button" class="btn btn-primary" style="display:inline-block;" onclick="get_job_stats_form()">Request new search term</button></div>
+          <div class="col-lg-4"><button id="search_analyze" type="button" class="btn btn-primary" style="display:inline-block;" onclick="get_job_stats_form()">Search and analyze!</button></div>
           <div class="col-lg-4"></div>
         </div>
         </div>
