FIX: font size mpl and home page

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -68,10 +68,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <a class="btn btn-primary btn-xl" href="/find_best.html">
-                <h1 id="homeHeading">Find jobs that need your skills in<br />
+
+                <h1 id="homeHeading" style="background-color: #000000; display: inline-block; border-radius: 25px; padding: 20px;">Find jobs that need your skills in<br />
                 <ul style="list-style-type: none; display:inline-block; text-align: center; margin: auto; padding: 0;" id="js-rotating">
-                </ul><br /></h1></a>
+                </ul><br /></h1>
                 <hr>
                 <a href="/search_jobs.html" class="page-scroll btn btn-default btn-xl sr-button">Go on, try it out!</a>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
