FIX: mobile colsize

--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -122,9 +122,9 @@
         <div class="container">
 
             <div class="row">
-              <div class="col-lg-6 text-center" id="search_results1">
+              <div class="col-lg-6 col-md-6 col-sm-6 text-center" id="search_results1">
               </div>
-              <div class="col-lg-6 text-center" id="search_results2">
+              <div class="col-lg-6 col-md-6 col-sm-6 text-center" id="search_results2">
               </div>
             </div>
 
@@ -140,9 +140,9 @@
                   </div>
                   <div id="collapseOne" class="panel-collapse collapse out">
                     <div class="panel-body">
-                      <div class="col-lg-6 text-center" id="location_plot1">
+                      <div class="col-lg-6 col-md-6 col-sm-6 text-center" id="location_plot1">
                       </div>
-                      <div class="col-lg-6 text-center" id="location_plot2">
+                      <div class="col-lg-6 col-md-6 col-sm-6 text-center" id="location_plot2">
                       </div>
                       <br />
                       <div class="col-lg-12 text-center" id="add_locs">
