--- a/app/static/search_jobs.html
+++ b/app/static/search_jobs.html
@@ -122,9 +122,9 @@
         <div class="container">
 
             <div class="row">
-              <div class="col-lg-6 col-sm-12 text-center" id="search_results1">
+              <div class="col-md-6 col-xs-12 text-center" id="search_results1">
               </div>
-              <div class="col-lg-6 col-sm-12 text-center" id="search_results2">
+              <div class="col-md-6 col-xs-12 text-center" id="search_results2">
               </div>
             </div>
 
@@ -140,15 +140,15 @@
                   </div>
                   <div id="collapseOne" class="panel-collapse collapse out">
                     <div class="panel-body">
-                      <div class="col-lg-6 col-sm-12 text-center" id="location_plot1">
+                      <div class="col-md-6 col-xs-12 text-center" id="location_plot1">
                       </div>
-                      <div class="col-lg-6 col-sm-12 text-center" id="location_plot2">
-                      </div>
-                      <br />
-                      <div class="col-lg-12 text-center" id="add_locs">
+                      <div class="col-md-6 col-xs-12 text-center" id="location_plot2">
                       </div>
                       <br />
-                      <div class="col-lg-12 text-center">
+                      <div class="col-md-12 text-center" id="add_locs">
+                      </div>
+                      <br />
+                      <div class="col-md-12 text-center">
                         <ul class="list-group" id="locs_list">
                         </ul>
                       </div>
@@ -159,13 +159,13 @@
             </div>
 
             <div class="row">
-              <div class="col-lg-6 col-sm-12 text-center" id="search_instructions1">
+              <div class="col-md-6 col-xs-12 text-center" id="search_instructions1">
                 <p>Shift+click on the bars in the skills (and/or locations) chart to filter the job listings below.</br>
                 Click outside of the bars to reset your selection.</p>
                 <ul class="list-group" id="skills_list">
                 </ul>
               </div>
-              <div class="col-lg-6 col-sm-12 text-center">
+              <div class="col-md-6 col-xs-12 text-center">
                 <p id="search_instructions2">Choose a salary range to filter by:</p>
                 <div class="input-group" id="salary_range">
                 </div>
@@ -179,7 +179,7 @@
             </div>
 
             <div class="row">
-              <div class="col-lg-12" id="job_listings" style="overflow: hidden;">
+              <div class="col-md-12" id="job_listings" style="overflow: hidden;">
               </div>
             </div>
 
